--- a/pragmasoft-site-new/trunk/pom.xml
+++ b/pragmasoft-site-new/trunk/pom.xml
@@ -31,6 +31,7 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- Mail API -->
@@ -38,6 +39,7 @@
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
 			<version>1.4.7</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- Freemarker -->
