--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <groupId>ua.com.pragmasoft</groupId>
   <artifactId>pragmasoftSite</artifactId>
   <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>2024.6.1</version>
   <name>pragmasoft</name>
   <url>https://www.pragmasoft.com.ua</url>
 
